add filter image

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                 </fw-accordion-title>
                 <fw-accordion-body>
                     <p>Here's our collection mapping - a C# class that describes the collection.</p>
+                    <p>You must register a class map before it's needed in your code. We recommend registering class
+                        maps prior to initializing a connection with MongoDB.</p>
+                    <p>https://www.mongodb.com/docs/drivers/csharp/v2.19/fundamentals/serialization/class-mapping/</p>
                     <pre>
                         <code>
 
